--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -101,14 +101,26 @@
   margin-top: 29px;
   color: black;
 }
-@media only screen and (max-width: 340px) {
+.data-banner-container {
+  height: 600px;
+  overflow: hidden;
+  margin: 40px 30px 10px 30px;
+  width: 390px;
+  text-align: center;
+}
+.data-banner {
+  height: 510px;
+  border-radius: 30px;
+}
+
+@media only screen and (max-width: 450px) {
   .data-banner-container {
     height: 360px !important;
-    padding-left: 2rem !important;
+    /* padding-left: 2rem !important; */
   }
   .data-banner {
     background-size: cover !important;
-    margin-right: 3rem !important;
+
     height: 300px !important;
   }
 }
@@ -143,7 +155,6 @@
   } */
   .data-banner-container {
     width: 255px !important;
-    padding-left: 1rem !important;
   }
   .data-banner {
     background-size: cover !important;
@@ -190,6 +201,7 @@
   .collection-item-text {
     /* max-width: 200px; */
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     font-size: 20px;
   }
